Добавляет состояния элементам слайдера

--- a/source/form.html
+++ b/source/form.html
@@ -52,16 +52,16 @@
           <ul class="form__module-list">
             <li class="form__module-item">
               <label class="form__text-label" for="name">Имя:*
-                <input class="form__text-input" type="text" name="name" id="name" placeholder="Барсик">
+                <input class="form__text-input form__text-input--invalid" type="text" name="name" id="name" placeholder="Барсик">
               </label>
             </li>
             <li class="form__module-item">
-              <label class="form__text-label" for="weigth">Вес(кг):*
+              <label class="form__text-label form__text-input--invalid" for="weigth">Вес(кг):*
                 <input class="form__text-input" type="text" name="name" id="weigth" placeholder="7">
               </label>
             </li>
             <li class="form__module-item">
-              <label class="form__text-label" for="age">Возраст(лет):*
+              <label class="form__text-label" for="age">Возраст(лет):
                 <input class="form__text-input" type="text" name="name" id="age" placeholder="7">
               </label>
             </li>
