Переписано меню в шапке

--- a/source/form.html
+++ b/source/form.html
@@ -56,13 +56,13 @@
               </label>
             </li>
             <li class="form__module-item">
-              <label class="form__text-label form__text-input--invalid" for="weigth">Вес(кг):*
-                <input class="form__text-input" type="text" name="name" id="weigth" placeholder="7">
+              <label class="form__text-label" for="weigth">Вес(кг):*
+                <input class="form__text-input form__text-input--invalid" type="number" name="name" id="weigth" placeholder="7">
               </label>
             </li>
             <li class="form__module-item">
               <label class="form__text-label" for="age">Возраст(лет):
-                <input class="form__text-input" type="text" name="name" id="age" placeholder="7">
+                <input class="form__text-input" type="number" name="name" id="age" placeholder="7">
               </label>
             </li>
           </ul>
@@ -177,7 +177,7 @@
           </li>
         </ul>
       </div>
-      <a class="footer__dev" href="#">
+      <a class="footer__dev" href="https://htmlacademy.ru/intensive/adaptive">
         <p class="footer__dev-name">HTML Academy</p>
       </a>
     </div>
