--- a/source/catalog.html
+++ b/source/catalog.html
@@ -375,7 +375,7 @@
           </li>
         </ul>
       </div>
-      <a class="footer__dev" href="#">
+      <a class="footer__dev" href="https://htmlacademy.ru/intensive/adaptive">
         <p class="footer__dev-name">HTML Academy</p>
       </a>
     </div>
