--- a/source/index.html
+++ b/source/index.html
@@ -69,13 +69,13 @@
             <h2 class="program__title">Похудение</h2>
             <p class="program__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
               Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-            <a class="program__link" href="catalog.html">Каталог Slim</a>
+            <a class="program__link" href="#">Каталог Slim</a>
           </li>
           <li class="program__item program__item--pro">
             <h2 class="program__title">Набор массы</h2>
             <p class="program__text">Заработать авторитет среди дворовых котов и даже собак?
               Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-            <a class="program__link" href="catalog.html">Каталог Pro</a>
+            <a class="program__link" href="#">Каталог Pro</a>
           </li>
         </ul>
       </div>
@@ -192,7 +192,7 @@
           </li>
         </ul>
       </div>
-      <a class="footer__dev" href="#">
+      <a class="footer__dev" href="https://htmlacademy.ru/intensive/adaptive">
         <p class="footer__dev-name">HTML Academy</p>
       </a>
     </div>
