--- a/source/form.html
+++ b/source/form.html
@@ -23,6 +23,8 @@
           <source type="image/webp" width="174" height="50" media="(min-width: 768px)" srcset="images/logo-tablet@2x.webp">
           <img class="logo__image logo__image--icon" src="images/logo-mobile.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
         </picture>
+      </a>
+      <a href="index.html" aria-current="page">
         <svg class="logo__image-title" width="101" height="18">
           <use href="../icons/stack.svg#logo-title"></use>
         </svg>
