--- a/source/catalog.html
+++ b/source/catalog.html
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="styles/style.css">
   <link rel="preload" href="fonts/oswald/oswaldmedium.woff2" as="font" type="font/woff2">
   <link rel="preload" href="fonts/oswald/oswaldregular.woff2" as="font" type="font/woff2">
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="favicons/favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="favicons/apple-icon.png">
+  <link rel="manifest" href="icon.webmanifest">
   <title>Каталог Cat Energy</title>
 </head>
 
