--- a/source/form.html
+++ b/source/form.html
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="styles/style.css">
   <link rel="preload" href="fonts/oswald/oswaldmedium.woff2" as="font" type="font/woff2">
   <link rel="preload" href="fonts/oswald/oswaldregular.woff2" as="font" type="font/woff2">
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="favicons/favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="favicons/apple-icon.png">
+  <link rel="manifest" href="icon.webmanifest">
   <title>Форма Cat Energy</title>
 </head>
 
@@ -24,8 +28,8 @@
           <img class="logo__image logo__image--icon" src="images/logo-mobile.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
         </picture>
       </a>
-      <a href="index.html" aria-current="page">
-        <svg class="logo__image-title" width="101" height="18">
+      <a class="page-header" href="index.html" aria-current="page">
+        <svg class="logo__image-title page-header__image-title" width="101" height="18">
           <use href="../icons/stack.svg#logo-title"></use>
         </svg>
       </a>
