--- a/source/catalog.html
+++ b/source/catalog.html
@@ -338,8 +338,8 @@
     <section class="footer__address footer__address--background">
       <div class="container footer__container">
         <div class="footer__address-container">
-          <p class="footer__address-title">Приглашаем к сотрудничеству<br> дилеров!</p>
-          <p class="footer__address-text">ул. Большая<br> конюшенная, д. 19/8<br> <span>Санкт-Петербург</span></p>
+          <p class="footer__address-title">Приглашаем<br> к сотрудничеству<br> дилеров!</p>
+          <p class="footer__address-text">ул. Большая<br> Конюшенная, д. 19/8<br> <span>Санкт-Петербург</span></p>
         </div>
       </div>
       <div class="map">
