--- a/source/form.html
+++ b/source/form.html
@@ -28,8 +28,8 @@
           <img class="logo__image logo__image--icon" src="images/logo-mobile.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
         </picture>
       </a>
-      <a class="page-header" href="index.html" aria-current="page">
-        <svg class="logo__image-title page-header__image-title" width="101" height="18">
+      <a class="logo__image-link" href="index.html" aria-current="page">
+        <svg class="logo__image-title" width="101" height="18">
           <use href="../icons/stack.svg#logo-title"></use>
         </svg>
       </a>
@@ -140,8 +140,8 @@
     <section class="footer__address footer__address--background">
       <div class="container footer__container">
         <div class="footer__address-container">
-          <p class="footer__address-title">Приглашаем к сотрудничеству<br> дилеров!</p>
-          <p class="footer__address-text">ул. Большая<br> конюшенная, д. 19/8<br> <span>Санкт-Петербург</span></p>
+          <p class="footer__address-title">Приглашаем<br> к сотрудничеству<br> дилеров!</p>
+          <p class="footer__address-text">ул. Большая<br> Конюшенная, д. 19/8<br> <span>Санкт-Петербург</span></p>
         </div>
       </div>
       <div class="map">
