--- a/source/index.html
+++ b/source/index.html
@@ -43,7 +43,7 @@
           <ul class="main-nav__list main-nav__list--index">
             <li class="main-nav__item"><a class="main-nav__link main-nav__link--active" href="index.html" aria-current="page">Главная</a></li>
             <li class="main-nav__item"><a class="main-nav__link" href="catalog.html">Каталог&nbsp;продукции</a></li>
-            <li class="main-nav__item"><a class="main-nav__link" href="form.html">Подбор&nbsp;программ</a></li>
+            <li class="main-nav__item"><a class="main-nav__link" href="form.html">Подбор&nbsp;программы</a></li>
           </ul>
         </div>
       </nav>
@@ -124,7 +124,7 @@
               <dd class="sample__value">60&nbsp;дней</dd>
             </div>
           </dl>
-          <p class="sample__price-text">Затраты на питание: <span>15&nbsp;000&nbsp;₽</span></p>
+          <p class="sample__price-text">Затраты на питание: <span>15&nbsp;000&nbsp;руб.</span></p>
         </div>
         <div class="slider">
           <picture>
@@ -155,8 +155,8 @@
     <section class="footer__address">
       <div class="container footer__container">
         <div class="footer__address-container">
-          <p class="footer__address-title">Приглашаем к сотрудничеству<br> дилеров!</p>
-          <p class="footer__address-text">ул. Большая<br> конюшенная, д. 19/8<br> <span>Санкт-Петербург</span></p>
+          <p class="footer__address-title">Приглашаем<br> к сотрудничеству<br> дилеров!</p>
+          <p class="footer__address-text">ул. Большая<br> Конюшенная, д. 19/8<br> <span>Санкт-Петербург</span></p>
         </div>
       </div>
       <div class="map">
