--- a/source/index.html
+++ b/source/index.html
@@ -111,7 +111,7 @@
       <div class="container sample__container">
         <h2 class="sample__title">Живой пример</h2>
         <p class="sample__text">Борис сбросил 5&nbsp;кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
-          Отличный результат без изнуряющих тренировок!
+          Отличный результат <br>без изнуряющих тренировок!
           При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
         <div class="sample__wrapper">
           <dl class="sample__list">
