--- a/source/catalog.html
+++ b/source/catalog.html
@@ -42,7 +42,7 @@
           <ul class="main-nav__list">
             <li class="main-nav__item"><a class="main-nav__link" href="index.html">Главная</a></li>
             <li class="main-nav__item"><a class="main-nav__link main-nav__link--active" href="catalog.html" aria-current="page">Каталог&nbsp;продукции</a></li>
-            <li class="main-nav__item"><a class="main-nav__link" href="form.html">Подбор&nbsp;программ</a></li>
+            <li class="main-nav__item"><a class="main-nav__link" href="form.html">Подбор&nbsp;программы</a></li>
           </ul>
         </div>
       </nav>
