--- a/source/catalog.html
+++ b/source/catalog.html
@@ -212,10 +212,10 @@
             <div class="product__container">
               <a class="product__image-wrapper" href="#">
                 <picture>
-                  <source type="image/png" width="161" height="172" media="(min-width: 1440px)" srcset="images/catenergy-slim-1000-buckwheat-desktop@1x.png, images/catenergy-slim-1000-buckwheat-desktop@2x.png 2x">
-                  <source type="image/webp" width="161" height="172" media="(min-width: 1440px)" srcset="images/catenergy-slim-1000-buckwheat-desktop@1x.webp, images/catenergy-slim-1000-buckwheat-desktop@2x.webp 2x">
-                  <source type="image/webp" width="162" height="173" media="(min-width: 768px)" srcset="images/catenergy-slim-1000-buckwheat-tablet@1x.webp, images/catenergy-slim-1000-buckwheat-tablet@2x.webp 2x">
-                  <source type="image/png" width="162" height="173" media="(min-width: 768px)" srcset="images/catenergy-slim-1000-buckwheat-tablet@1x.png, images/catenergy-slim-1000-buckwheat-tablet@2x.png 2x">
+                  <source type="image/png" width="168" height="206" media="(min-width: 1440px)" srcset="images/catenergy-slim-1000-buckwheat-desktop@1x.png, images/catenergy-slim-1000-buckwheat-desktop@2x.png 2x">
+                  <source type="image/webp" width="168" height="206" media="(min-width: 1440px)" srcset="images/catenergy-slim-1000-buckwheat-desktop@1x.webp, images/catenergy-slim-1000-buckwheat-desktop@2x.webp 2x">
+                  <source type="image/webp" width="168" height="206" media="(min-width: 768px)" srcset="images/catenergy-slim-1000-buckwheat-tablet@1x.webp, images/catenergy-slim-1000-buckwheat-tablet@2x.webp 2x">
+                  <source type="image/png" width="168" height="206" media="(min-width: 768px)" srcset="images/catenergy-slim-1000-buckwheat-tablet@1x.png, images/catenergy-slim-1000-buckwheat-tablet@2x.png 2x">
                   <img class="product__image" width="84" height="101" src="images/catenergy-slim-1000-buckwheat-mobile@1x.png" srcset="images/catenergy-slim-1000-buckwheat-mobile@2x.png 2x" alt="Рацион 1000 гамм. Cat Energy Slim. Вкус-гречка.">
                 </picture>
               </a>
@@ -260,7 +260,7 @@
                 </div>
                 <div class="product__info-item">
                   <dt>Вкус</dt>
-                  <dd>Гречка</dd>
+                  <dd>Рис</dd>
                 </div>
                 <div class="product__info-item">
                   <dt>Цена</dt>
@@ -300,7 +300,7 @@
               <dt class="visually-hidden">Объём</dt>
               <dd>5 литров</dd>
               <dt class="visually-hidden">Цена</dt>
-              <dd class="catalog__product-definition">200&nbsp;₽</dd>
+              <dd class="catalog__product-definition">50&nbsp;₽</dd>
             </dl>
             <a class="button button--other" href="#">Заказать</a>
           </li>
