ПП форма мобильная версия

--- a/source/form.html
+++ b/source/form.html
@@ -91,7 +91,7 @@
           </ul>
         </fieldset>
         <fieldset class="form__module form__module--contacts">
-          <legend class="form__module-legend form__module-legend--contacts">Контактрые&nbsp;данные<br> (владельца кота)</legend>
+          <legend class="form__module-legend form__module-legend--contacts">Контактные&nbsp;данные<br> (владельца кота)</legend>
           <ul class="form__module-list form__module-list--contacts">
             <li class="form__module-item">
               <label class="form__field-label" for="e-mail">E-mail:*
