--- a/source/form.html
+++ b/source/form.html
@@ -42,7 +42,7 @@
           <ul class="main-nav__list">
             <li class="main-nav__item"><a class="main-nav__link" href="index.html">Главная</a></li>
             <li class="main-nav__item"><a class="main-nav__link" href="catalog.html">Каталог продукции</a></li>
-            <li class="main-nav__item"><a class="main-nav__link main-nav__link--active" href="form.html" aria-current="page">Подбор программ</a></li>
+            <li class="main-nav__item"><a class="main-nav__link main-nav__link--active" href="form.html" aria-current="page">Подбор программы</a></li>
           </ul>
         </div>
       </nav>
