ПП полностью завершен

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -17,6 +17,7 @@
 <body class="page__body">
   <header class="page-header">
     <div class="container page-header__container">
+      <span class="visually-hidden">На главную страницу</span>
       <a class="page-header__logo logo" href="index.html">
         <picture>
           <source type="image/svg" width="202" height="59" media="(min-width: 1440px)" srcset="images/logo-desktop.svg">
@@ -29,6 +30,7 @@
         </picture>
       </a>
       <a href="index.html" aria-current="page">
+        <span class="visually-hidden">На главную страницу</span>
         <svg class="logo__image-title" width="101" height="18">
           <use href="../icons/stack.svg#logo-title"></use>
         </svg>
