--- a/source/index.html
+++ b/source/index.html
@@ -19,6 +19,7 @@
   <header class="page-header page-header--index">
     <div class="container page-header__container">
       <a class="page-header__logo logo" href="index.html" aria-current="page">
+        <span class="visually-hidden">На главную страницу</span>
         <picture>
           <source type="image/svg" width="202" height="59" media="(min-width: 1440px)" srcset="images/logo-desktop.svg">
           <source type="image/png" width="202" height="59" media="(min-width: 1440px)" srcset="images/logo-desktop@1x.png, images/logo-desktop@2x.png 2x">
@@ -30,6 +31,7 @@
         </picture>
       </a>
       <a href="index.html" aria-current="page">
+        <span class="visually-hidden">На главную страницу</span>
         <svg class="logo__image-title" width="101" height="18">
           <use href="../icons/stack.svg#logo-title"></use>
         </svg>
