--- a/source/form.html
+++ b/source/form.html
@@ -18,6 +18,7 @@
   <header class="page-header">
     <div class="container page-header__container">
       <a class="page-header__logo logo" href="index.html">
+        <span class="visually-hidden">На главную страницу</span>
         <picture>
           <source type="image/svg" width="202" height="59" media="(min-width: 1440px)" srcset="images/logo-desktop.svg">
           <source type="image/webp" width="174" height="50" media="(min-width: 1440px)" srcset="images/logo-desktop@1x.webp">
@@ -29,6 +30,7 @@
         </picture>
       </a>
       <a class="logo__image-link" href="index.html" aria-current="page">
+        <span class="visually-hidden">На главную страницу</span>
         <svg class="logo__image-title" width="101" height="18">
           <use href="../icons/stack.svg#logo-title"></use>
         </svg>
@@ -55,19 +57,19 @@
         <p class="form__text">Заполните анкету, и мы подберем<br> программу питания для вашего кота</p>
         <fieldset class="form__module form__module--info">
           <legend class="visually-hidden">Информация о питомце</legend>
-          <ul class="form__module-list">
+          <ul class="form__module-list form__module-list--data">
             <li class="form__module-item">
               <label class="form__text-label" for="name">Имя:*
                 <input class="form__text-input form__text-input--invalid" type="text" name="name" id="name" placeholder="Барсик">
               </label>
             </li>
             <li class="form__module-item">
-              <label class="form__text-label" for="weigth">Вес(кг):*
+              <label class="form__text-label" for="weigth">Вес&nbsp;(кг):*
                 <input class="form__text-input form__text-input--invalid" type="number" name="name" id="weigth" placeholder="7">
               </label>
             </li>
             <li class="form__module-item">
-              <label class="form__text-label" for="age">Возраст(лет):
+              <label class="form__text-label" for="age">Возраст&nbsp;(лет):
                 <input class="form__text-input" type="number" name="name" id="age" placeholder="7">
               </label>
             </li>
@@ -75,7 +77,7 @@
         </fieldset>
         <fieldset class="form__module form__module--diet">
           <legend class="visually-hidden">Какая диета интересует</legend>
-          <ul class="form__module-list">
+          <ul class="form__module-list form__module-list--diet">
             <li class="form__module-radio">
               <input class="form__radio-input" type="radio" name="diet" id="lose-weight" value="lose-weight" checked>
               <label class="form__radio-label" for="lose-weight">Похудение</label>
@@ -111,7 +113,7 @@
           <textarea class="form__comment-input" name="comment" id="comment" placeholder="Расскажите обо всех повадках кота"></textarea>
         </fieldset>
         <fieldset class="form__module form__module--extra">
-          <legend class="form__module-legend form__module-legend--extra">Дополнительно:</legend>
+          <legend class="form__module-legend form__module-legend--extra">Дополнительно</legend>
           <ul class="form__module-list form__module-list--extra">
             <li class="form__module-check">
               <input class="form__checkbox-input" type="checkbox" checked id="sweetener" name="sweetener">
