--- a/source/index.html
+++ b/source/index.html
@@ -33,7 +33,7 @@
       <a href="index.html" aria-current="page">
         <span class="visually-hidden">На главную страницу</span>
         <svg class="logo__image-title" width="101" height="18">
-          <use href="../../icons/logo-title.svg"></use>
+          <use href="../icons/logo-title.svg"></use>
         </svg>
       </a>
       <nav class="main-nav main-nav--is-close main-nav--nojs">
