--- a/source/form.html
+++ b/source/form.html
@@ -32,7 +32,7 @@
       <a class="logo__image-link" href="index.html" aria-current="page">
         <span class="visually-hidden">На главную страницу</span>
         <svg class="logo__image-title" width="101" height="18">
-          <use href="../icons/stack.svg#logo-title"></use>
+          <use href="icons/stack.svg#logo-title"></use>
         </svg>
       </a>
       <nav class="main-nav main-nav--is-close main-nav--nojs">
@@ -162,7 +162,7 @@
       <a class="logo footer__logo" href="index.html">
         <span class="visually-hidden">Логотип Catenergy</span>
         <svg class="logo__image-footer" width="101" height="18">
-          <use href="../icons/stack.svg#logo-title"></use>
+          <use href="icons/stack.svg#logo-title"></use>
         </svg>
       </a>
       <div class="social">
