Исправлен путь к иконке подарка

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -329,7 +329,7 @@
         </ul>
         <div class="other-action">
           <svg class="other-action__gift" width="78" height="80">
-            <use href="../icons/stack.svg#icon-gift"></use>
+            <use href="icons/stack.svg#icon-gift"></use>
           </svg>
           <p class="other-action__text">Закажите все<br>и получите чехол для<br>кота в подарок!</p>
         </div>
