Исправляет меню навигации переполение и браузерный фокус

--- a/source/index.html
+++ b/source/index.html
@@ -36,10 +36,9 @@
           <use href="icons/stack.svg#logo-title"></use>
         </svg>
       </a>
-      <nav class="main-nav main-nav--is-close main-nav--nojs">
+      <nav class="main-nav main-nav--is-open main-nav--nojs">
         <button class="btn-burger" type="button">
-          <span class="visually-hidden">Открыть меню</span>
-          <span class="visually-hidden">Закрыть меню</span>
+          <span class="visually-hidden">Открыть/закрыть меню</span>
         </button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list main-nav__list--index">
