--- a/source/form.html
+++ b/source/form.html
@@ -35,7 +35,7 @@
           <use href="icons/stack.svg#logo-title"></use>
         </svg>
       </a>
-      <nav class="main-nav main-nav--is-close main-nav--nojs">
+      <nav class="main-nav main-nav--is-open main-nav--nojs">
         <button class="btn-burger" type="button">
           <span class="visually-hidden">Открыть меню</span>
           <span class="visually-hidden">Закрыть меню</span>
