Исправлено замечание: Переполнение в блоке "Как это работает"

--- a/source/index.html
+++ b/source/index.html
@@ -92,18 +92,10 @@
       <div class="container advantages__container">
         <h2 class="advantages__title">Как это работает</h2>
         <ul class="advantages__list">
-          <li class="advantages__item advantages__item--healthy">
-            <p class="advantages__text">Функциональное питание содержит только полезные питательные вещества.</p>
-          </li>
-          <li class="advantages__item advantages__item--fast">
-            <p class="advantages__text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
-          </li>
-          <li class="advantages__item advantages__item--nutritious">
-            <p class="advantages__text">Замените один-два приема обычной еды на наше функциональное питание.</p>
-          </li>
-          <li class="advantages__item advantages__item--effective">
-            <p class="advantages__text">Уже через месяц наслаждайтесь изменениями к лучшему<br> вашего питомца!</p>
-          </li>
+          <li class="advantages__item advantages__item--healthy">Функциональное питание содержит только полезные питательные вещества.</li>
+          <li class="advantages__item advantages__item--fast">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
+          <li class="advantages__item advantages__item--nutritious">Замените один-два приема обычной еды на наше функциональное питание.</li>
+          <li class="advantages__item advantages__item--effective">Уже через месяц наслаждайтесь изменениями к лучшему<br> вашего питомца!</li>
         </ul>
       </div>
     </section>
