Замечание product__container планшетная версия

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -255,10 +255,10 @@
               </dl>
               <a class="product__button button" href="#">Заказать</a>
           </li>
-          <li class="product product--more">
-            <div class="product__more">
-              <h2 class="product__description">Показать еще 100500 товаров</h2>
-              <p class="product__text">На самом деле вкусов гораздо больше!</p>
+          <li class="more-products">
+            <div class="more-products__container">
+              <h2 class="more-products__description">Показать еще 100500 товаров</h2>
+              <p class="more-products__text">На самом деле вкусов гораздо больше!</p>
               <a class="button button--more" href="#">Показать все</a>
             </div>
           </li>
