--- a/source/index.html
+++ b/source/index.html
@@ -16,8 +16,7 @@
 
 <body class="page__body">
   <header class="page-header page-header--index">
-    <div class="container page-header__container">
-      <nav class="main-nav main-nav--is-open main-nav--nojs">
+      <nav class="main-nav main-nav--nojs">
         <a class="page-header__logo logo" href="index.html" aria-current="page">
           <span class="visually-hidden">На главную страницу</span>
           <picture>
@@ -30,7 +29,7 @@
             <img class="logo__image logo__image--icon" src="images/logo-mobile.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
           </picture>
         </a>
-        <a href="index.html" aria-current="page">
+        <a class="page-header__logo-title" href="index.html" aria-current="page">
           <span class="visually-hidden">На главную страницу</span>
           <svg class="logo__image-title" width="101" height="18">
             <use href="icons/stack.svg#logo-title"></use>
@@ -45,7 +44,6 @@
             <li class="main-nav__item"><a class="main-nav__link" href="form.html">Подбор&nbsp;программы</a></li>
           </ul>
       </nav>
-    </div>
   </header>
   <main class="main">
     <section class="promo">
