--- a/source/index.html
+++ b/source/index.html
@@ -20,20 +20,14 @@
         <a class="page-header__logo logo" href="index.html" aria-current="page">
           <span class="visually-hidden">На главную страницу</span>
           <picture>
-            <source type="image/svg" width="202" height="59" media="(min-width: 1440px)" srcset="images/logo-desktop.svg">
-            <source type="image/png" width="202" height="59" media="(min-width: 1440px)" srcset="images/logo-desktop@1x.png, images/logo-desktop@2x.png 2x">
-            <source type="image/webp" width="202" height="59" media="(min-width: 1440px)" srcset="images/logo-desktop@1x.webp, images/logo-desktop@2x.webp 2x">
-            <source type="image/svg" width="174" height="50" media="(min-width: 768px)" srcset="images/logo-tablet.svg">
-            <source type="image/png" width="174" height="50" media="(min-width: 768px)" srcset="images/logo-tablet@1x.png, images/logo-tablet@2x.png 2x">
-            <source type="image/webp" width="174" height="50" media="(min-width: 768px)" srcset="images/logo-tablet@1x.webp, images/logo-tablet@2x.webp 2x">
-            <img class="logo__image logo__image--icon" src="images/logo-mobile.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
+            <source type="image/svg+xml" width="202" height="59" media="(min-width: 1440px)" srcset="images/logo-desktop.svg">
+            <source type="image/svg+xml" width="174" height="50" media="(min-width: 768px)" srcset="images/logo-tablet.svg">
+            <img class="logo__image logo__image--icon" width="33" height="38" alt="Супер-кот в маске на желтом фоне" src="images/logo-mobile.svg">
           </picture>
         </a>
         <a class="page-header__logo-title" href="index.html" aria-current="page">
           <span class="visually-hidden">На главную страницу</span>
-          <svg class="logo__image-title" width="101" height="18">
-            <use href="icons/stack.svg#logo-title"></use>
-          </svg>
+          <img class="logo__image-title" src="images/logo-title.svg" width="101" height="18" alt="Логотип Catenergy">
         </a>
         <button class="btn-burger" type="button">
           <span class="visually-hidden">Открыть/закрыть меню</span>
