Правки для мобильного меню

--- a/source/index.html
+++ b/source/index.html
@@ -156,9 +156,7 @@
     <div class="container footer__link-container">
       <a class="logo footer__logo" href="index.html" aria-current="page">
         <span class="visually-hidden">Логотип Catenergy</span>
-        <svg class="logo__image-footer" width="101" height="18">
-          <use href="icons/stack.svg#logo-title"></use>
-        </svg>
+        <img class="logo__image-footer" src="images/logo-title.svg" width="101" height="18" alt="Логотип Catenergy">
       </a>
       <div class="social">
         <h2 class="visually-hidden">Мы в социальных сетях</h2>
