Исправляет форму по последним замечаниям.

--- a/source/index.html
+++ b/source/index.html
@@ -22,7 +22,7 @@
           <picture>
             <source type="image/svg+xml" width="202" height="59" media="(min-width: 1440px)" srcset="images/logo-desktop.svg">
             <source type="image/svg+xml" width="174" height="50" media="(min-width: 768px)" srcset="images/logo-tablet.svg">
-            <img class="logo__image logo__image--icon" width="33" height="38" alt="Супер-кот в маске на желтом фоне" src="images/logo-mobile.svg">
+            <img class="logo__image logo__image--icon" width="33" height="38" src="images/logo-mobile.svg" alt="Супер-кот в маске на желтом фоне">
           </picture>
         </a>
         <a class="page-header__logo-title" href="index.html" aria-current="page">
