Правки ПП перед отправкой

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -32,7 +32,7 @@
       <button class="btn-burger" type="button">
         <span class="visually-hidden">Открыть/закрыть меню</span>
       </button>
-        <ul class="main-nav__list main-nav__list--index">
+        <ul class="main-nav__list">
           <li class="main-nav__item"><a class="main-nav__link" href="index.html">Главная</a></li>
           <li class="main-nav__item"><a class="main-nav__link main-nav__link--active" href="catalog.html">Каталог&nbsp;продукции</a></li>
           <li class="main-nav__item"><a class="main-nav__link" href="form.html">Подбор&nbsp;программы</a></li>
