Исправляет замечание по критерию Б5

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -27,7 +27,7 @@
       </a>
       <a class="page-header__logo-title" href="index.html">
         <span class="visually-hidden">На главную страницу</span>
-        <img class="logo__image-title" src="images/logo-title.svg" width="101" height="18" alt="Логотип Catenergy">
+        <img class="page-header__title" src="images/logo-title.svg" width="101" height="18" alt="Логотип Catenergy">
       </a>
       <button class="btn-burger" type="button">
         <span class="visually-hidden">Открыть/закрыть меню</span>
