Исправляет замечания по критерию Б13

--- a/source/index.html
+++ b/source/index.html
@@ -29,7 +29,7 @@
           <span class="visually-hidden">На главную страницу</span>
           <img class="page-header__title" src="images/logo-title.svg" width="101" height="18" alt="Логотип Catenergy">
         </a>
-        <button class="btn-burger" type="button">
+        <button class="main-nav__btn btn-burger" type="button">
           <span class="visually-hidden">Открыть/закрыть меню</span>
         </button>
           <ul class="main-nav__list main-nav__list--index">
